--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,6 @@
   <div class="item-main">
     <div class="menu" style="display: flex; flex-direction: column">
       <div style="margin: 10%; height: 10%">
-        <!-- <button mat-button (click)="openDialog()">Open dialog</button> -->
         <button  mat-button (click)="onComposeMail()" style="width: 100%; height: 50px; border-radius: 5px">Compose Mail</button>
       </div>
       <div style="height: 30%;background-color: currentColor;"></div>
@@ -42,7 +41,7 @@
             />
           </div>
           <div class="name" style="width: 15%">
-            {{ mail.name }}
+            {{ mail.senderName }}
           </div>
           <div class="sub" style="width: 65%">
             {{ mail.sub }}
