--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,12 +1,16 @@
 .item-header {
+  display: flex;
+  text-align: center;
+  align-items: center;
   grid-area: header;
-  background-color: aliceblue;
+  background-color: white;
 }
 .item-main {
   display: flex;
   align-items: stretch;
   grid-area: main;
-  background-color: aqua;
+  background-color: #f3f3f4;
+  padding: 20px;
 }
 .item-sidebar {
   grid-area: sidebar;
@@ -17,8 +21,8 @@
   display: grid;
   width: 100vw;
   height: 100vh;
-  grid-template-columns: 15% repeat(3, 1fr);
-  grid-template-rows: 70px repeat(2, 1fr);
+  grid-template-columns: 4% repeat(3, 1fr);
+  grid-template-rows: 60px repeat(2, 1fr);
   grid-template-areas:
     "sidebar header header header"
     "sidebar main main main"
@@ -28,10 +32,29 @@
 .menu {
   width: 25%;
   background-color: #f3f3f4;
+  padding: 0 20px 20px 0;
 }
 .mails {
   width: 80%;
   display: flex;
   flex-direction: column;
-  background-color: coral;
+  background-color: white;
+}
+
+.list {
+  position: relative;
+  display: inline-block;
+}
+
+.list:after {
+  content: "list";
+}
+
+.menu-list {
+  height: 25px;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  border-bottom: 1px solid #b8b8b8;
+  margin-bottom: 3px;
 }
