Added log-out button

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -19,6 +19,7 @@
     >
     </span>
     <div style="color: #999999">Search something...</div>
+    <div (click)="onLogOut()" style="position: absolute; right: 30px;color: #00b494;cursor: pointer;">Log Out</div>
   </div>
 
   <div class="item-main">
